fix grid_row-gap_half

--- a/src/base.blocks/grid.scss
+++ b/src/base.blocks/grid.scss
@@ -32,7 +32,7 @@
   }
 
   &_row-gap_half {
-    row-gap: var(--gap / 2);
+    row-gap: calc(var(--gap) / 2);
   }
 }
 
